# c_u_soon

./: .gitignore  Cargo.toml  Makefile  README.md
c_u_later/: Cargo.toml
c_u_later/derive/: Cargo.toml
c_u_later/derive/src/: lib.rs
c_u_later/src/: lib.rs  validation.rs
c_u_later/tests/: delta_tests.rs  derive_tests.rs  ui_tests.rs
c_u_later/tests/ui/: generic_field_error.rs  generic_field_error.stderr
c_u_soon_derive/: Cargo.toml
c_u_soon_derive/src/: lib.rs
client/: Cargo.toml
client/src/: lib.rs
client_common/: Cargo.toml
client_common/src/: lib.rs
cpi/: Cargo.toml
cpi/src/: lib.rs
instruction/: Cargo.toml
instruction/src/: lib.rs
program/: Cargo.toml
program/src/: entrypoint.rs  fast_path.rs  lib.rs  pda.rs  slow_path.rs
program/src/instructions/: apply_ranges.rs  clear_delegation.rs  close.rs  cpi_verification.rs  create.rs  mod.rs  set_delegated_program.rs  update_auxiliary.rs  update_auxiliary_delegated.rs  update_auxiliary_delegated_multi_range.rs  update_auxiliary_force.rs  update_auxiliary_multi_range.rs
program/tests/: basic_tests.rs  cpi_integration_tests.rs  delegation_security_tests.rs  multi_range_tests.rs  range_update_tests.rs
program/tests/common/: mod.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/tests/: derive_tests.rs
test-programs/attacker_probe/: Cargo.toml
test-programs/attacker_probe/src/: lib.rs
test-programs/byte_writer/: Cargo.toml
test-programs/byte_writer/src/: lib.rs
