[workspace]
resolver = "2"
members = ["sdk", "program", "client", "client_common", "cpi", "c_u_later", "c_u_later/derive", "c_u_soon_derive"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "Apache-2.0"
repository = "https://github.com/figaro-sol/c_u_soon"

[workspace.dependencies]
pinocchio = { git = "ssh://git@github.com/figaro-sol/pinocchio.git", branch = "small_oracle" }

solana-address = { version = "2.0", features = ["bytemuck"] }
bytemuck = { version = "1.25", features = ["derive", "min_const_generics"] }
wincode = { version = "0.2", features = ["derive"] }
