[package]
name = "c_u_later"
version.workspace = true
edition.workspace = true

[features]
default = ["derive", "alloc"]
derive = ["dep:c_u_later_derive"]
alloc = []

[dependencies]
c_u_later_derive = { path = "derive", optional = true }
c_u_soon = { path = "../sdk" }
bytemuck = { workspace = true }

[dev-dependencies]
c_u_soon = { path = "../sdk", features = ["derive"] }
