[package]
name = "c_u_soon_cpi"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
c_u_soon = { path = "../sdk" }
c_u_soon_instruction = { path = "../instruction" }
pinocchio = { workspace = true, features = ["cpi"] }
wincode = { workspace = true, features = ["alloc"] }
