[package]
name = "c_u_soon_program"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
c_u_soon = { path = "../sdk" }
c_u_soon_instruction = { path = "../instruction" }
bytemuck = { workspace = true }
wincode = { workspace = true, features = ["std"] }
pinocchio = { workspace = true, features = ["cpi"] }
pinocchio-system = "0.5"


[dev-dependencies]
c_u_soon_client = { path = "../client" }
c_u_soon_cpi = { path = "../cpi" }
c_u_soon_instruction = { path = "../instruction" }
wincode = { workspace = true, features = ["std"] }
log = "0.4"
mollusk-svm = "0.10"
solana-sdk = "3.0"
solana-system-interface = "2.0"
