[package]
name = "c_u_soon"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = []
derive = ["dep:c_u_soon_derive"]

[dependencies]
bytemuck = { workspace = true }
solana-address = { workspace = true }
c_u_soon_derive = { path = "../c_u_soon_derive", optional = true }
